--- a/css_intro/assignments/css_basics/style.css
+++ b/css_intro/assignments/css_basics/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 header {
-    background:khaki;
+    background:palegreen;
     padding: 10px;
     margin-top: -10px;
     margin-right: -20px;
@@ -21,7 +21,7 @@ h1 {
 
 h2 {
     text-align: center;
-    background: palegreen;
+    background: sandybrown;
     font-family: cursive;
     font-size: medium;
     padding-top: 10px;
