--- a/css_intro/assignments/geocities/style.css
+++ b/css_intro/assignments/geocities/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 h1 {
-    font-family: cursive;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;;
     font-size: 65px;
     color: honeydew;
     text-align: center;
@@ -12,7 +12,7 @@ h1 {
 }
 
 h2 {
-    font-family: cursive;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-size: 40px;
     color: honeydew;
     text-align: center;
@@ -28,7 +28,7 @@ p {
     text-align: left;
     padding-left: 50px;
     padding-right: 500px;
-    padding-top: 150px;
+    padding-top: 200px;
 }
 .ferret1 {
     width:300px;
